--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:server": "cd server && npm run mock-server",
     "build": "run-p -l type-check build:prod",
     "build:prod": "npm run clean && webpack --config ./config/webpack/prod.js",
+    "build:dev": "npm run clean && webpack --config ./config/webpack/dev.js",
+    "deploy": "gh-pages -d dist",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "clean": "rimraf dist",
@@ -45,6 +47,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
