--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "start": "run-p -l type-check:watch start:dev",
     "start:dev": "webpack serve --config ./config/webpack/dev.js",
-    "start:server": "cd server && npm run mock-server",
     "build": "run-p -l type-check build:prod",
     "build:prod": "npm run clean && webpack --config ./config/webpack/prod.js",
     "build:dev": "npm run clean && webpack --config ./config/webpack/dev.js",
     "deploy": "gh-pages -d dist",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "clean": "rimraf dist",
-    "postinstall": "cd ./server && npm install"
+    "clean": "rimraf dist"
   },
   "author": "Lemoncode",
   "license": "MIT",
